--- a/split-nn/concepts-definitions-text/Split Learning Intuitions and Definitions.ipynb
+++ b/split-nn/concepts-definitions-text/Split Learning Intuitions and Definitions.ipynb
@@ -227,13 +227,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p=1/2 : information is: 1.000, entropy is: 1.000 bits\n",
+      "p=1/10: information is: 3.322, entropy is: 0.469 bits\n"
+     ]
+    }
+   ],
    "source": [
     "from math import log2\n",
     "def  information(p):\n",
-    "    pass\n",
+    "    inf = -log2(p)\n",
+    "    h = -((p * log2(p)) + ((1-p) * log2(1-p)))\n",
+    "    return inf, h\n",
     "\n",
     "print('p=1/2 : information is: %.3f, entropy is: %.3f bits' % information(1/2))\n",
     "print('p=1/10: information is: %.3f, entropy is: %.3f bits' % information(1/10))"
@@ -242,7 +253,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -256,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
